// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitCommitNodeByline author (compact) 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        alt=""
        aria-label="User avatar"
        class="iconInline userAvatar mr-1 mr-2"
        data-tooltip="Alice Zhao"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      committed by 
      <span
        class="font-weight-bold"
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
        data-tooltip="1990-01-01"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline author 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        alt=""
        aria-label="User avatar"
        class="iconInline userAvatar mr-1 mr-2"
        data-tooltip="Alice Zhao"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      committed by 
      <span
        class="font-weight-bold"
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
        data-tooltip="1990-01-01"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline different author and committer (compact) 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div
      class="flex-shrink-0"
    >
      <img
        alt=""
        aria-label="User avatar"
        class="iconInline userAvatar"
        data-tooltip="Alice Zhao (author)"
        role="presentation"
        src="http://example.com/alice.png"
      />
       
      <img
        alt=""
        aria-label="User avatar"
        class="iconInline userAvatar mr-2"
        data-tooltip="bYang (committer)"
        role="presentation"
        src="http://example.com/bob.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      <span
        class="font-weight-bold"
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
       authored and commited by 
      <a
        class="font-weight-bold"
        data-tooltip="Bob Yang <bob@example.com>"
        href="https://example.com/bobyang"
      >
        bYang
      </a>
       
      <span
        class="timestamp"
        data-tooltip="1991-01-01"
      >
        about 15 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline different author and committer 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div
      class="flex-shrink-0"
    >
      <img
        alt=""
        aria-label="User avatar"
        class="iconInline userAvatar"
        data-tooltip="Alice Zhao (author)"
        role="presentation"
        src="http://example.com/alice.png"
      />
       
      <img
        alt=""
        aria-label="User avatar"
        class="iconInline userAvatar mr-2"
        data-tooltip="bYang (committer)"
        role="presentation"
        src="http://example.com/bob.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      <span
        class="font-weight-bold"
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
       authored and commited by 
      <a
        class="font-weight-bold"
        data-tooltip="Bob Yang <bob@example.com>"
        href="https://example.com/bobyang"
      >
        bYang
      </a>
       
      <span
        class="timestamp"
        data-tooltip="1991-01-01"
      >
        about 15 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline omit GitHub committer 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        alt=""
        aria-label="User avatar"
        class="iconInline userAvatar mr-1 mr-2"
        data-tooltip="Alice Zhao"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      committed by 
      <span
        class="font-weight-bold"
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
        data-tooltip="1990-01-01"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline same author and committer 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        alt=""
        aria-label="User avatar"
        class="iconInline userAvatar mr-1 mr-2"
        data-tooltip="Alice Zhao"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      committed by 
      <span
        class="font-weight-bold"
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
        data-tooltip="1990-01-01"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;
